hphp/hack/test/typecheck/array/safe_vector_array/darray_with_array_map_returns_dict_like_array.php.like_types.exp
File "darray_with_array_map_returns_dict_like_array.php", line 4, characters 10-68:
Invalid return type (Typing[4110])
File "darray_with_array_map_returns_dict_like_array.php", line 3, characters 35-53:
Expected darray<string, bool>
File "stdlib/builtins_array.hhi", line 118, characters 10-18:
But got varray<[unresolved]>
