hphp/hack/test/typecheck/array/safe_vector_array/darray_with_array_map_returns_dict_like_array.php
<?hh // strict

function providesDictLikeArray(): array<string, bool> {
  return array_map($x ==> $x, darray["foo" => true, "bar" => false]);
}
